# redot2koinly

./: .gitignore  LICENSE  PROJECTPLAN.md  README.md  pyproject.toml  requirements.txt
data/: .gitkeep
redot2koinly/: __init__.py  cli.py  config.py  convert.py  image_utils.py  logger.py  ocr.py  parser.py
scripts/: run_regression.sh
tests/: data_expected.csv  error1_expected.csv  eth_expected.csv  test_end_to_end.py  test_incremental_runs.py  test_regression_data_dir.py  test_regression_error1.py  test_regression_error2.py  test_regression_eth.py
